syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.microservices.grpc"; // Package chung cho các lớp gRPC được tạo
option java_outer_classname = "UserServiceProto"; // Tên lớp chính được tạo

package user; // Tên package cho dịch vụ gRPC

service UserServiceGrpc {
  rpc GetUserById (GetUserRequest) returns (UserResponse);
}

message GetUserRequest {
  int64 user_id = 1;
}

message UserResponse {
  int64 id = 1;
  string username = 2;
  string email = 3;
}